[project]
name = "automudae"
version = "0.1.0"
description = ""
authors = [
    {name = "Alif Yasa",email = "130131893+alifyasa@users.noreply.github.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "discord-py-self (>=2.0.1,<3.0.0)",
    "aiolimiter (>=1.2.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
isort = "^6.0.1"
black = "^25.1.0"
mypy = "^1.16.1"
pylint = "^3.3.7"
pyflakes = "^3.4.0"
types-pyyaml = "^6.0.12.20250516"
pylint-pydantic = "^0.3.5"

[tool.pylint.main]
disable = ["C0114", "C0115", "C0116", "R0911", "C0301", "R0903"]
load-plugins = "pylint_pydantic"

[tool.pylint.format]
max-line-length = "88"
